[package]
name = "morningstar"
version = "0.1.0"
edition = "2021"
default-run = "morningstar"

[dependencies]
nalgebra = { version = "0.33.0", features = [
    "convert-glam028",
    "convert-glam027",
] }
prism = { path = "../prism" }
color-eyre = "0.6.2"
sefirot = { path = "../sefirot/sefirot", features = [
    "bevy",
    "glam",
    "nalgebra",
] }
sefirot_grid = { path = "../sefirot/sefirot_grid" }
bevy_sefirot = { path = "../sefirot/bevy_sefirot" }
bevy_egui = "0.29.0"
egui = "0.28.1"
bevy_flycam = "0.14.1"
serde = { version = "1.0.209", features = ["derive"] }
ron = "0.8.1"
smallvec = "1.13.2"
parking_lot = "0.12.3"

[dependencies.bevy]
version = "0.14.1"

[features]
default = ["dylib"]
dylib = ["bevy/dynamic_linking"]
timed = ["bevy_sefirot/trace"]
debug = ["bevy_sefirot/debug"]
trace = ["bevy/trace_chrome", "bevy_sefirot/trace"]

[profile.dev.package.'*']
opt-level = 3
